@@ -43,11 +43,13 @@ import org.jdom.input.SAXBuilder;
 import java.io.BufferedInputStream;
 import java.io.BufferedOutputStream;
 import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.FileReader;
+import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.Properties;
@@ -194,5 +196,11 @@ public final class Util {
         } finally {
             IO.close(fr);
         }
+    }
+
+    public static void writeStringToFile(String string, File lock) throws IOException {
+        BufferedWriter writer = new BufferedWriter(new FileWriter(lock));
+        writer.write(string);
+        writer.close();
     }
 }
